Bug 161213 - Wrong SVG arrow end marker color
Summary: Wrong SVG arrow end marker color
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 t...
Keywords:
: 147052 (view as bug list)
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2024-05-22 11:48 UTC by Philippos P
Modified: 2025-07-03 07:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the issue (Inkscape vs Impress) (79.71 KB, image/png)
2024-05-22 11:51 UTC, Philippos P
Details
sample SVG (1.77 KB, image/svg+xml)
2024-05-22 13:02 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philippos P 2024-05-22 11:48:46 UTC
Description:
When importing an SVG with colored arrows, their end ("end mark") appear black instead of their original color.

Steps to Reproduce:
1. Create a green arrow in an SVG using Inkscape (or download this example https://philippos.info/temp/green_arrow.svg )
2. Drag and drop the SVG file into Impress, Draw or Writer.
3. The end mark immediately appears black, in all modes (preview, exported etc.)

Actual Results:
Green arrow with black ending (end mark)

Expected Results:
Green arrow with green ending (end mark)


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.2.3.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 16; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-GB (C.UTF-8); UI: en-US
24.2.3-1
Calc: threaded
Comment 1 Philippos P 2024-05-22 11:51:16 UTC
Created attachment 194271 [details]
Screenshot of the issue (Inkscape vs Impress)
Comment 2 Xisco Faulí 2024-05-22 11:57:10 UTC
Reproduced in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a525895a5f820350dc307969b1e8fd5d218a1ddd
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 3 Xisco Faulí 2024-05-22 11:58:13 UTC
Also reproduced in

Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: 229123ccc6f90ebf66b3e659bebbd53f8a9bdd3a
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: fr-FR (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 4 stragu 2024-05-22 13:02:52 UTC
Created attachment 194275 [details]
sample SVG
Comment 5 Commit Notification 2024-06-13 12:48:07 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1a7c927f6fb8fc4f6f2277a8442ce4b37f1ffccf

tdf#161213: fill can use context-stroke and vice versa

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-06-13 20:33:28 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/afcb44694ed77902b1b1a3335b9e465e660ff6fd

tdf#161213: fill can use context-stroke and vice versa

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 stragu 2024-06-14 04:22:37 UTC
Thanks Xisco, verified in own build:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0e2409e5e3c73ec25c61aa4ea140d114869ea512
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded
Comment 8 Commit Notification 2024-06-27 14:44:04 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/8c5b0a2429c77eb601eb4d825527e1edbe1fed0d

tdf#161213: fill can use context-stroke and vice versa

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2025-07-03 07:24:55 UTC
*** Bug 147052 has been marked as a duplicate of this bug. ***