svgio/source/svgreader/svgstyleattributes.cxx
@@ -1332,6 +1332,10 @@ namespace svgio::svgreader
                     {
                         mbContextFill = true;
                     }
+                    else if(o3tl::equalsIgnoreAsciiCase(o3tl::trim(aContent), u"context-stroke"))
+                    {
+                        mbContextStroke = true;
+                    }
                     else if(readSvgPaint(aContent, aSvgPaint, aURL, aOpacity))
                     {
                         setFill(aSvgPaint);
@@ -1380,6 +1384,10 @@ namespace svgio::svgreader
                     if(o3tl::equalsIgnoreAsciiCase(o3tl::trim(aContent), u"context-stroke"))
                     {
                         mbContextStroke = true;
+                    }
+                    else if(o3tl::equalsIgnoreAsciiCase(o3tl::trim(aContent), u"context-fill"))
+                    {
+                        mbContextFill = true;
                     }
                     else if(readSvgPaint(aContent, aSvgPaint, aURL, aOpacity))
                     {
@@ -2130,6 +2138,10 @@ namespace svgio::svgreader
             {
                 return getContextFill();
             }
+            else if (mbContextStroke)
+            {
+                return getContextStroke();
+            }
             else if (maNodeFillURL.isEmpty())
             {
                 const SvgStyleAttributes* pSvgStyleAttributes = getParentStyle();
@@ -2174,6 +2186,10 @@ namespace svgio::svgreader
                 {
                     return &maStroke.getBColor();
                 }
+            }
+            else if (mbContextFill)
+            {
+                return getContextFill();
             }
             else if (mbContextStroke)
             {
